MCR-2853 add common configuration properties to cron job